# liveplot

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  install.py  pyproject.toml
examples/: ex1.py  ex2.py  ex3.py  ex4.py  ex5.py  ex6.py
src/liveplot/: __init__.py  logger.py  plot.py  plotmanager.py  process.py  request.py
