[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "liveplot"
version = "1.0.0"
description = "Python package for live plotting via matplotlib."
readme = "README.md"
requires-python = ">=3.11,<=3.13"
authors = [
    { name = "Alec Roberson", email = "alectroberson@gmail.com" }
]
dependencies = [
    "matplotlib",
    "numpy",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
lint.select = ["E", "F", "I", "B", "T", "RUF"]
lint.ignore = ["E501"]
